--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewCharacterActivity">
-
-    <?xml version="1.0" encoding="ISO-8859-1"?>
     <LinearLayout tools:context=".NewCharacterActivity" android:padding="16dp" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
         <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent">
             <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimaryDark" android:text="name"/>
@@ -19,11 +17,16 @@
         <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="16dp" android:layout_marginBottom="24dp">
             <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="stats"/>
             <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
-                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="wisdom:" android:paddingTop="8dp" android:layout_marginEnd="4dp"/>
-                <TextView android:id="@+id/wisdomTextView" android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="24sp" tools:text="16" android:layout_marginEnd="8dp"/>
-                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="strength:" android:paddingTop="8dp" android:layout_marginEnd="4dp"/>
-                <TextView android:id="@+id/strengthTextView" android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="24sp" tools:text="16" android:layout_marginEnd="8dp"/>
-                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="dexterity:" android:paddingTop="8dp" android:layout_marginEnd="4dp"/>
+                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="wisdom:" android:paddingTop="8dp" android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp" />
+                <TextView android:id="@+id/wisdomTextView" android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="24sp" tools:text="16" android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp" />
+                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="strength:" android:paddingTop="8dp" android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp" />
+                <TextView android:id="@+id/strengthTextView" android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="24sp" tools:text="16" android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp" />
+                <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="16sp" android:textColor="@color/colorPrimary" android:text="dexterity:" android:paddingTop="8dp" android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp" />
                 <TextView android:id="@+id/dexterityTextView" android:layout_height="match_parent" android:layout_width="wrap_content" android:textSize="24sp" tools:text="16"/>
             </LinearLayout>
         </LinearLayout>
